# MolReactGen

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt
data/raw/debug/: debug_all.csv  debug_test.csv  debug_train.csv  debug_val.csv
results/smarts/: README.md  smarts.csv
results/smiles/: README.md  smiles.csv
src/molreactgen/: __init__.py  assess.py  config.py  evaluate.py  evaluate_fcd.py  generate.py  generate_smarts.py  helpers.py  molecule.py  prepare_data.py  tokenizer.py  train.py  train_hf.py
src/molreactgen/conf/: debug.args  debug.yaml  debug_finetuning.args  debug_finetuning.yaml  finetuning_debug.yaml  guacamol.args  guacamol.yaml  guacamol_finetuning.args  guacamol_hidden_dim_768.args  sweep_debug.yaml  sweep_debug.yml  sweep_guacamol.yaml  sweep_guacamol_step_1b.yaml  sweep_guacamol_step_2a.yaml  train.args  uspto50k.args  uspto50k.yaml  zinc.args  zinc.yaml
src/molreactgen/fcd_torch/: setup.py  test.py
src/molreactgen/fcd_torch.save/: .travis.yml  MANIFEST.in
src/molreactgen/fcd_torch.save/fcd_torch/: fcd.py
src/molreactgen/fcd_torch/fcd_torch/: __init__.py  keras2pytorch.py  utils.py
src/molreactgen/scripts/: assess_smiles.sh  generate_n_times.sh  generate_smarts.sh  generate_smiles.sh  train_guacamol.sh  train_guacamol_n_times.sh  train_uspto50k.sh  train_uspto50k_n_times.sh
src/molreactgen/utils/: 2023-10-26_experiments.sh  2023-10-30_generate_smiles.sh  2023-10-30_train_guacamol.sh  __init__.py  assess.sh  check_gitattributes.sh  check_tokenizer.py  collect_env_details.py  collect_metrics.py  compute_fcd_stats.py  generate.sh  generate_loop.sh  generate_smarts.sh  generate_smiles.sh  merge_items.py  rename_files.py  start_experiments_11.sh  start_experiments_2.sh  start_experiments_3.sh  start_experiments_4.sh  start_experiments_5.sh  start_sweep.sh  statistical_tests.ipynb  train_loop.sh  train_tokenizers.py
tokenizers/debug/atom_wordlevel_34.json/: tokenizer.json
tokenizers/debug/char_bpe_176.json/: tokenizer.json
tokenizers/debug/char_bpe_44.json/: tokenizer.json
tokenizers/debug/char_bpe_88.json/: tokenizer.json
tokenizers/debug/char_unigram_176.json/: tokenizer.json  tokenizer_config.json
tokenizers/debug/char_unigram_44.json/: tokenizer.json
tokenizers/debug/char_unigram_88.json/: tokenizer.json
tokenizers/debug/char_wordlevel_32.json/: tokenizer.json
tokenizers/debug/char_wordpiece_176.json/: tokenizer.json
tokenizers/debug/char_wordpiece_64.json/: tokenizer.json
tokenizers/debug/char_wordpiece_88.json/: tokenizer.json
tokenizers/debug/smarts_wordlevel_44.json/: tokenizer.json
tokenizers/guacamol/atom_wordlevel_50/: tokenizer.json
tokenizers/guacamol/atom_wordlevel_50.json/: tokenizer.json
tokenizers/guacamol/char_bpe_176/: tokenizer.json
tokenizers/guacamol/char_bpe_176.json/: tokenizer.json
tokenizers/guacamol/char_bpe_44/: tokenizer.json
tokenizers/guacamol/char_bpe_44.json/: tokenizer.json
tokenizers/guacamol/char_bpe_88/: tokenizer.json
tokenizers/guacamol/char_bpe_88.json/: tokenizer.json
tokenizers/guacamol/char_unigram_176/: tokenizer.json
tokenizers/guacamol/char_unigram_176.json/: tokenizer.json
tokenizers/guacamol/char_unigram_44/: tokenizer.json
tokenizers/guacamol/char_unigram_44.json/: tokenizer.json
tokenizers/guacamol/char_unigram_88/: tokenizer.json
tokenizers/guacamol/char_unigram_88.json/: tokenizer.json
tokenizers/guacamol/char_wordlevel_38/: tokenizer.json
tokenizers/guacamol/char_wordlevel_38.json/: tokenizer.json
tokenizers/guacamol/char_wordpiece_176/: special_tokens_map.json  tokenizer.json
tokenizers/guacamol/char_wordpiece_176.json/: tokenizer.json
tokenizers/guacamol/char_wordpiece_76.json/: tokenizer.json
tokenizers/guacamol/char_wordpiece_88/: tokenizer.json
tokenizers/guacamol/char_wordpiece_88.json/: tokenizer.json
tokenizers/guacamol/smarts_wordlevel_106/: tokenizer.json
tokenizers/guacamol/smarts_wordlevel_106.json/: tokenizer.json
tokenizers/uspto50k/atom_wordlevel_86.json/: tokenizer.json
tokenizers/uspto50k/char_bpe_176/: tokenizer.json
tokenizers/uspto50k/char_bpe_47/: tokenizer.json
tokenizers/uspto50k/char_bpe_88.json/: tokenizer.json
tokenizers/uspto50k/char_unigram_176/: tokenizer.json
tokenizers/uspto50k/char_unigram_176.json/: tokenizer.json
tokenizers/uspto50k/char_unigram_75/: tokenizer.json
tokenizers/uspto50k/char_unigram_75.json/: tokenizer.json
tokenizers/uspto50k/char_unigram_88/: tokenizer.json
tokenizers/uspto50k/char_unigram_88.json/: tokenizer.json
tokenizers/uspto50k/char_wordlevel_47/: tokenizer.json
tokenizers/uspto50k/char_wordpiece_176/: tokenizer.json
tokenizers/uspto50k/char_wordpiece_176.json/: tokenizer.json
tokenizers/uspto50k/char_wordpiece_94/: tokenizer.json
tokenizers/uspto50k/char_wordpiece_94.json/: tokenizer.json
tokenizers/uspto50k/smarts_wordlevel_947/: tokenizer.json
