[tool.poetry]
name = "MolReactGen"
version = "0.1a1"
description = "Auto-regressive transformer decoder based on Hugging Face GPT-2 to generate molecules (SMILES) and reaction templates (SMARTS)"
authors = ["Stephan Holzgruber <stephan.holzgruber@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/hogru/MolReactGen"
keywords = ["transformer", "auto-regressive model", "molecules", "reactions", "SMILES", "SMARTS", "GPT-2"]

[tool.poetry.dependencies]
codetiming = "^1.4.0"
humanfriendly = "^10.0"
jupyter = "^1.0.0"
loguru = "^0.6.0"
notebook = "^6.4.11"
numpy = "^1.22.3"
packaging = "^23.0"
pandas = "^1.4.3"
python = ">=3.9,<3.10"
PyTDC = "^0.3.6"
rdkit-pypi = "^2022.3.2"
rich = "^13.3.0"
scipy = "^1.10.0"
subset = "^0.1.2"
torch = [
  { version = "1.13.1", platform = "darwin" },
  { version = "^1.13.1", platform = "linux" }
]
torchmetrics = "^0.11.0"
tqdm = "^4.64.0"
wandb = "^0.13.0"
transformers = "^4.26.0"
datasets = "^2.9.0"
evaluate = "^0.4.0"
tensorboard = "^2.11.0"
rdchiral = "^1.1.0"
pooch = "^1.6.0"
types-tqdm = "^4.64.7.11"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0"
isort = "^5.12.0"
mypy = "^0.991"
psutil = "^5.9.4"
pytest = "^7.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

# see https://towardsdev.com/how-to-manage-pytorch-dependency-with-poetry-14da0057af5a
# [tool.poe.tasks]
# install-pytorch = "pip install torch==1.13 -f https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
)/
'''

[tool.isort]
profile = "black"
line_length = 80
