[tool.poetry]
name = "MolReactGen"
version = "1.0.0b0"
description = "Auto-regressive transformer decoder based on the Hugging Face implementation of Open AI's GPT-2 to generate molecules (SMILES) and reaction templates (SMARTS)"
authors = ["Stephan Holzgruber <stephan.holzgruber@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/hogru/molreactgen"
keywords = ["transformer decoder", "GPT-2", "generation", "auto-regressive", "molecule", "reaction template", "SMILES", "SMARTS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA :: 11.4",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
codetiming = "^1.4"
humanfriendly = "^10.0"
jupyter = "^1.0.0"
loguru = "^0.7.0"
notebook = "^7.0.0"
numpy = "^1.22.3"
packaging = "^23.0"
pandas = "^1.5"
python = ">=3.9,<3.10"
PyTDC = "^0.3.6"
rdkit-pypi = "^2022.3.2"
rich = "^13.3.0"
scipy = "^1.10.0"
subset = "^0.1.2"
# torch = "^1.13"
# pytorch 2.0.1 and pytorch 2.1 do not work with poetry 1.6.1, see https://github.com/pytorch/pytorch/issues/100974
torch = "^2.1"
# torch = [
#   { version = ">=2.0.0, !=2.0.1, !=2.1.0", platform = "linux" },
#   { version = "^2.1", platform = "darwin" }
# ]
tqdm = "^4.64.0"
wandb = "^0.15.0"
transformers = ">=4.26.0, <5.0"
tokenizers = "^0.14"
datasets = "^2.9.0"
tensorboard = "^2.11.0"
rdchiral = "^1.1.0"
pooch = "^1.6.0"
types-tqdm = "^4.64.7.11"
pre-commit = "^3.2.0"
evaluate = "^0.4.0"
plotly = "^5.14.1"
kaleido = "0.2.1"
psutil = "^5.9.5"
accelerate = "^0.24"
bumpver = "^2023.1129"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
flake8 = "^6.0"
isort = "^5.12.0"
mypy = "^1.1.0"
psutil = "^5.9.4"
pytest = "^7.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"


[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
)/
'''

[tool.isort]
profile = "black"
line_length = 88
filter_files = true

[tool.bumpver]
current_version = "1.0.0b0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
"src/molreactgen/__init__.py" = ["{version}"]
